# personal-os

./: .gitignore  CONTEXT.md  README.md  backend_notes.md  frontend_notes.md
backend/: api.py  langgraph.json  personal_os.db  pyproject.toml
backend/agent/: graph.py  llm.py  state.py
backend/agent/nodes/: finance.py  journal.py  movie.py  router.py
backend/models/: __init__.py  database.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/dashboard/: FinanceTab.tsx  JournalTab.tsx  MoviesTab.tsx
frontend/src/components/ui/: JournalEntryCard.tsx  MovieLogCard.tsx
learning_notes/: useStream.md  why.md
