[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.12",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.1",
    "langgraph-cli[inmem]>=0.4.15",
    "python-dotenv>=1.2.2",
]
